--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -26,6 +26,7 @@
 @special-text: @dark-red;
 
 @body-bg: @brand-primary-bg-lightest;
+@body-bg-alt: fafafa;
 
 @row-spacing-base: 9px;
 @grid-gutter-width: 10px;
